added validation for gc options in cli app